--- a/asset/styles.scss
+++ b/asset/styles.scss
@@ -14,4 +14,5 @@ body {
     font-family: "Inconsolata", monospace;
     background-image: linear-gradient(#1209B6, #080450);
     background-repeat: no-repeat;
+    overflow-x: hidden;
 }
